Closed Bug 1445935 Opened 6 years ago Closed 6 years ago

leftCite in HTMLEditRules::SplitMailCites() isn't set to left node of the split node

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- wontfix
firefox60 --- fixed
firefox61 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: regression)

Attachments

(1 file)

https://searchfox.org/mozilla-central/source/editor/libeditor/HTMLEditRules.cpp#1971,1973,1982,1989,2034,2036,2042
In this revision, leftCite is set to the left node of split node. However, now, leftCite is never set to non-nullptr:
https://searchfox.org/mozilla-central/source/editor/libeditor/HTMLEditRules.cpp#1992-1995,2006-2008,2017,2077,2079,2085

So, left node of the split node won't be removed even if it's unnecessary.

I found this when I work on another bug. So, I don't know how to meet actual symptom.
Comment on attachment 8959174 [details]
Bug 1445935 - HTMLEditRules::SplitMailCites() remove left node of split node if it becomes empty

https://reviewboard.mozilla.org/r/228038/#review234058
Attachment #8959174 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/ce9c476f9dfc
HTMLEditRules::SplitMailCites() remove left node of split node if it becomes empty r=m_kato
https://hg.mozilla.org/mozilla-central/rev/ce9c476f9dfc
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment on attachment 8959174 [details]
Bug 1445935 - HTMLEditRules::SplitMailCites() remove left node of split node if it becomes empty

Approval Request Comment
[Feature/Bug causing the regression]:
Regression of bug 1413181.

[User impact if declined]:
Nothing for Firefox users, this path runs only on mail composer except automated tests.

[Is this code covered by automated tests?]:
No.

[Has the fix been verified in Nightly?]:
No.

[Needs manual test from QE? If yes, steps to reproduce]: 
No.

[List of other uplifts needed for the feature/fix]:
None.

[Is the change risky?]:
No.

[Why is the change risky/not risky?]:
I just forgot to do this in bug 1413181. Therefore, this patch just gets back the old behavior, it removes unnecessary (empty) <blockquote> element when pressing enter or something.

[String changes made/needed]:
No.
Attachment #8959174 - Flags: approval-mozilla-beta?
Comment on attachment 8959174 [details]
Bug 1445935 - HTMLEditRules::SplitMailCites() remove left node of split node if it becomes empty

editor regression fix, beta60+
Attachment #8959174 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: